<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/activity_add_vehicle_title_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/modify_vehicle_title"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="17dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_make" android:layout_marginTop="76dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp" android:layout_marginEnd="1dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/make" android:textColorHint="#616161"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_modify_price" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_make" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp" android:layout_marginEnd="230dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/model" android:textColorHint="#616161"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_modify_soldDate" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_make" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="230dp" android:layout_marginEnd="1dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/engine"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_door" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_modify_price" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp" android:layout_marginEnd="230dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/doors"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_color" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_modify_soldDate" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="230dp" android:layout_marginEnd="1dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/color" android:textColorHint="#616161"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp" android:layout_marginEnd="230dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_door" android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year" android:textColorHint="#616161"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="230dp" android:layout_marginEnd="1dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_color" android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price" android:textColorHint="#616161"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_condition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="230dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_year">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/condition" android:textColorHint="#616161"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_dateSold" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_price" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="230dp" android:layout_marginEnd="1dp" android:visibility="invisible">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateSold"/>
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="450dp" android:id="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="80dp">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/imageView_modifyCompanyView"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp" android:src="@drawable/baseline_image_24"/>
            <Button
                    android:text="@string/upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btn_UploadImage_modifyCompanyView"
                    android:layout_gravity="right|center_vertical"
                    android:layout_marginLeft="40dp"/>
        </LinearLayout>
        <Button
                android:text="@string/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_addSubmit"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="204dp"
                android:layout_marginStart="32dp"/>
        <Button
                android:text="@string/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_GoHomePage"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="204dp" android:layout_marginEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>