<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ModifyCompanyActivity">
    <TextView
            android:text="@string/activity_modify_company_title_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/modify_vehicle_title"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="17dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_modify_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp" android:layout_marginEnd="230dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/btn_submitChange_modify_company">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_modify_city"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="230dp" android:layout_marginEnd="1dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/btn_GoHomePage_modify_company">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/city"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="230dp"
            android:id="@+id/textInputLayout_modify_province"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout_modify_name"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="40dp" android:layout_marginStart="1dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/province"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_modify_postalcode"
            android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_modify_city" android:layout_marginTop="40dp"
            android:layout_marginStart="230dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/postalCode"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_modify_street"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textInputLayout_modify_province" android:layout_marginTop="40dp">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_submitChange_modify_company"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="64dp"
            android:layout_marginStart="20dp"/>
    <Button
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_GoHomePage_modify_company"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="450dp" android:id="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="11dp" android:id="@+id/linearLayout2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_UploadImage_modifyCompanyView"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent">
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/imageView_modifyCompanyView"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp" android:src="@drawable/baseline_image_24"/>
        </LinearLayout>
        <Button
                android:text="@string/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/btn_UploadImage_modifyCompanyView"
                android:layout_gravity="right|center_vertical"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:layout_marginBottom="21dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>