<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <ListView
            android:layout_width="0dp"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="250dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/listView_modify_vehicle"/>
    <TextView
            android:text="@string/activity_modify_vehicle_title_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/modify_vehicle_title"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="17dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_modify_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp" android:layout_marginEnd="230dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/btn_submitChange_modify_vehicle">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textInputLayout_modify_soldDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="230dp" android:layout_marginEnd="1dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/btn_GoHomePage_modify_vehicle">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateSold"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_submitChange_modify_vehicle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="64dp"
            android:layout_marginStart="20dp"/>
    <Button
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_GoHomePage_modify_vehicle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp" android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>