<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_view_sold_title_string"
            android:id="@+id/soldPageTitle"
            android:textSize="30sp"
            android:selectAllOnFocus="false"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_GoAllVehicleView"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/soldPageTitle"/>
    <Spinner
            android:id="@+id/spinner_soldView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:contentDescription="@string/SpinnerSort"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/listView_SoldVehicle"/>
    <ListView
            android:id="@+id/listView_SoldVehicle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            android:scrollbars="horizontal|vertical" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="130dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>