<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CompanyDetailActivity">

    <TextView
            android:text="@string/activity_company_detail_title_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/textView_Company_Detail_Title"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <Button
            android:text="@string/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_Home_company_detailPage"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="20dp"/>
    <Button
            android:text="@string/modify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/btn_Modify_company_detailPage"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" android:layout_marginEnd="20dp" app:layout_constraintEnd_toEndOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="614dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_Home_company_detailPage"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp" android:id="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="1dp" android:layout_marginEnd="1dp"
            app:layout_constraintEnd_toEndOf="parent">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp" tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:id="@+id/imageView_company_detail"
                android:src="@drawable/used_car_logo"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/listView_company_detail"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>